--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">4
   <link rel="icon" href="img/LogoWeb.png" type="image/png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/LogoWeb.png?v=2">
+  <link rel="shortcut icon" type="image/png" href="img/LogoWeb.png?v=2">
 
   <script>
 document.addEventListener('DOMContentLoaded', () => {
