Mover favicon al head

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">4
-  <link rel="icon" href="img/LogoWeb.png" type="image/png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/LogoWeb.png?v=2">
-  <link rel="shortcut icon" type="image/png" href="img/LogoWeb.png?v=2">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
   <script>
 document.addEventListener('DOMContentLoaded', () => {
@@ -257,6 +254,11 @@ document.addEventListener('DOMContentLoaded', () => {
   start();
 });
 </script>
+
+
+  <link rel="icon" href="img/LogoWeb.png" type="image/png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/LogoWeb.png?v=2">
+  <link rel="shortcut icon" type="image/png" href="img/LogoWeb.png?v=2">
 </head>
   <header class="topbar">
   <nav class="nav" aria-label="Principal">
