--- a/index.html
+++ b/index.html
@@ -256,9 +256,8 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 
-  <link rel="icon" href="img/LogoWeb.png" type="image/png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/LogoWeb.png?v=2">
-  <link rel="shortcut icon" type="image/png" href="img/LogoWeb.png?v=2">
+  <link rel="icon" href="img/LogoWeb.png?v=3" type="image/png">
+  <link rel="shortcut icon" href="img/LogoWeb.png?v=3" type="image/png">
 </head>
   <header class="topbar">
   <nav class="nav" aria-label="Principal">
