--- a/index.html
+++ b/index.html
@@ -260,27 +260,33 @@ document.addEventListener('DOMContentLoaded', () => {
   <link rel="shortcut icon" href="img/LogoWeb.png?v=3" type="image/png">
 </head>
   <header class="topbar">
-  <nav class="nav" aria-label="Principal">
-    <div class="brand">
-      <img src="img/logo.png" alt="Armonía Viva">
-    </div>
+  <nav class="navbar navbar-expand-lg bg-white shadow-sm fixed-top">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#inicio">
+      <img src="img/logo.png" height="36" class="me-2" alt="Armonía Viva">
+      <span class="fw-bold">Armonía Viva</span>
+    </a>
 
-    <div class="menu">
-      <a href="#inicio">Inicio</a>
-      <a href="#cursos">Cursos</a>
-      <a href="#calendario">Calendario</a>
-      <a href="#eventos">Galería</a>
-      <a href="#videos">Videos</a>
-      <a href="#contacto">Contacto</a>
-    </div>
+    <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse" data-bs-target="#mainNav"
+            aria-controls="mainNav" aria-expanded="false" aria-label="Menú">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <div class="auth">
-      <a class="btn btn-login" href="login.html">Ingresar</a>
-      <a class="cta btn btn-primary rounded-3 px-3" href="registro.html">Inscríbete</a>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav ms-auto align-items-lg-center">
+        <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#cursos">Cursos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#calendario">Calendario</a></li>
+        <li class="nav-item"><a class="nav-link" href="#eventos">Galería</a></li>
+        <li class="nav-item"><a class="nav-link" href="#videos">Videos</a></li>
+        <li class="nav-item ms-lg-3">
+          <a class="btn btn-primary fw-bold" href="registro.html">Inscríbete</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-</header>
-
+  </div>
+</nav>
 
   <section id="inicio" class="hero">
     <div class="hero-inner">
