--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Armonía Viva</title>
 
-  <!-- Bootstrap 5 (CDN) -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -259,7 +258,9 @@ document.addEventListener('DOMContentLoaded', () => {
   <link rel="icon" href="img/LogoWeb.png?v=3" type="image/png">
   <link rel="shortcut icon" href="img/LogoWeb.png?v=3" type="image/png">
 </head>
+<body>
   <header class="topbar">
+    
   <nav class="nav" aria-label="Principal"> 
     <div class="brand"> 
       <img src="img/logo.png" alt="Armonía Viva"> 
