Menu Hamburguesa corregido y boton inscribete

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ document.addEventListener('DOMContentLoaded', () => {
     
     <div class="auth"> 
       <a class="btn btn-login" href="login.html">Ingresar</a> 
-      <a class="cta btn btn-primary rounded-3 px-3" href="registro.html">Inscríbete</a> 
+      <a class="cta btn btn-primary" href="registro.html">Inscríbete</a> 
     </div> 
   </nav> 
 </header>
